--- a/notebooks/12_Complex_synchronization_example.ipynb
+++ b/notebooks/12_Complex_synchronization_example.ipynb
@@ -109,47 +109,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    sub_processes = [\n",
-    "        model.BasicActivity(\n",
-    "            env=my_env,\n",
-    "            name=\"A Basic activity1\",\n",
-    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "            registry=registry,\n",
-    "            duration=14,\n",
-    "            additional_logs=[reporting_activity],\n",
-    "            keep_resources=keep_resources,\n",
-    "        ),\n",
-    "        model.BasicActivity(\n",
-    "            env=my_env,\n",
-    "            name=\"A Basic activity2\",\n",
-    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5c\",\n",
-    "            registry=registry,\n",
-    "            duration=10,\n",
-    "            additional_logs=[reporting_activity],\n",
-    "            keep_resources=keep_resources,\n",
-    "        ),\n",
-    "        model.BasicActivity(\n",
-    "            env=my_env,\n",
-    "            name=\"A Basic activity3\",\n",
-    "            ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5d\",\n",
-    "            registry=registry,\n",
-    "            duration=220,\n",
-    "            additional_logs=[reporting_activity],\n",
-    "            keep_resources=keep_resources,\n",
-    "            start_event=[\n",
-    "                {\"type\": \"activity\", \"name\": \"B Basic activity2\", \"state\": \"done\"}\n",
-    "            ],\n",
-    "        ),\n",
-    "    ]\n",
-    "\n",
-    "    activity = model.SequentialActivity(\n",
+    "sub_processes = [\n",
+    "    model.BasicActivity(\n",
     "        env=my_env,\n",
-    "        name=\"A Sequential process\",\n",
-    "        ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff60\",\n",
+    "        name=\"A Basic activity1\",\n",
+    "        ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
     "        registry=registry,\n",
-    "        sub_processes=sub_processes,\n",
+    "        duration=14,\n",
+    "        additional_logs=[reporting_activity],\n",
     "        keep_resources=keep_resources,\n",
-    "    )"
+    "    ),\n",
+    "    model.BasicActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"A Basic activity2\",\n",
+    "        ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5c\",\n",
+    "        registry=registry,\n",
+    "        duration=10,\n",
+    "        additional_logs=[reporting_activity],\n",
+    "        keep_resources=keep_resources,\n",
+    "    ),\n",
+    "    model.BasicActivity(\n",
+    "        env=my_env,\n",
+    "        name=\"A Basic activity3\",\n",
+    "        ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5d\",\n",
+    "        registry=registry,\n",
+    "        duration=220,\n",
+    "        additional_logs=[reporting_activity],\n",
+    "        keep_resources=keep_resources,\n",
+    "        start_event=[\n",
+    "            {\"type\": \"activity\", \"name\": \"B Basic activity2\", \"state\": \"done\"}\n",
+    "        ],\n",
+    "    ),\n",
+    "]\n",
+    "\n",
+    "activity = model.SequentialActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"A Sequential process\",\n",
+    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff60\",\n",
+    "    registry=registry,\n",
+    "    sub_processes=sub_processes,\n",
+    "    keep_resources=keep_resources,\n",
+    ")"
    ]
   },
   {
@@ -191,6 +191,8 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
+       "      <th>type</th>\n",
+       "      <th>ref</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -199,119 +201,169 @@
        "      <td>Reporting activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Reporting activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>B Basic activity1</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>A Basic activity1</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>B Basic activity1</td>\n",
        "      <td>1970-01-01 00:00:01</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>B Basic activity2</td>\n",
        "      <td>1970-01-01 00:00:01</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>A Basic activity1</td>\n",
        "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>A Basic activity2</td>\n",
        "      <td>1970-01-01 00:00:14</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>A Basic activity2</td>\n",
        "      <td>1970-01-01 00:00:24</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>B Basic activity2</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5c</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>B Basic activity3</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:00:24</td>\n",
        "      <td>WAIT_START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>WAIT_STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:08:21</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>B Basic activity3</td>\n",
        "      <td>1970-01-01 00:10:21</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>5dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>A Basic activity3</td>\n",
        "      <td>1970-01-01 00:12:01</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>6dbbbdf7-4589-11e9-bf3b-b469212bff5d</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              Activity           Timestamp ActivityState\n",
-       "0   Reporting activity 1970-01-01 00:00:00         START\n",
-       "1   Reporting activity 1970-01-01 00:00:00          STOP\n",
-       "2    B Basic activity1 1970-01-01 00:00:00         START\n",
-       "3    A Basic activity1 1970-01-01 00:00:00         START\n",
-       "4    B Basic activity1 1970-01-01 00:00:01          STOP\n",
-       "5    B Basic activity2 1970-01-01 00:00:01         START\n",
-       "6    A Basic activity1 1970-01-01 00:00:14          STOP\n",
-       "7    A Basic activity2 1970-01-01 00:00:14         START\n",
-       "8    A Basic activity2 1970-01-01 00:00:24          STOP\n",
-       "9    B Basic activity2 1970-01-01 00:08:21          STOP\n",
-       "10   B Basic activity3 1970-01-01 00:08:21         START\n",
-       "11   A Basic activity3 1970-01-01 00:00:24    WAIT_START\n",
-       "12   A Basic activity3 1970-01-01 00:08:21     WAIT_STOP\n",
-       "13   A Basic activity3 1970-01-01 00:08:21         START\n",
-       "14   B Basic activity3 1970-01-01 00:10:21          STOP\n",
-       "15   A Basic activity3 1970-01-01 00:12:01          STOP"
+       "              Activity           Timestamp ActivityState            type  \\\n",
+       "0   Reporting activity 1970-01-01 00:00:00         START             NaN   \n",
+       "1   Reporting activity 1970-01-01 00:00:00          STOP             NaN   \n",
+       "2    B Basic activity1 1970-01-01 00:00:00         START  additional log   \n",
+       "3    A Basic activity1 1970-01-01 00:00:00         START  additional log   \n",
+       "4    B Basic activity1 1970-01-01 00:00:01          STOP  additional log   \n",
+       "5    B Basic activity2 1970-01-01 00:00:01         START  additional log   \n",
+       "6    A Basic activity1 1970-01-01 00:00:14          STOP  additional log   \n",
+       "7    A Basic activity2 1970-01-01 00:00:14         START  additional log   \n",
+       "8    A Basic activity2 1970-01-01 00:00:24          STOP  additional log   \n",
+       "9    B Basic activity2 1970-01-01 00:08:21          STOP  additional log   \n",
+       "10   B Basic activity3 1970-01-01 00:08:21         START  additional log   \n",
+       "11   A Basic activity3 1970-01-01 00:00:24    WAIT_START  additional log   \n",
+       "12   A Basic activity3 1970-01-01 00:08:21     WAIT_STOP  additional log   \n",
+       "13   A Basic activity3 1970-01-01 00:08:21         START  additional log   \n",
+       "14   B Basic activity3 1970-01-01 00:10:21          STOP  additional log   \n",
+       "15   A Basic activity3 1970-01-01 00:12:01          STOP  additional log   \n",
+       "\n",
+       "                                     ref  \n",
+       "0                                    NaN  \n",
+       "1                                    NaN  \n",
+       "2   5dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "3   6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "4   5dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "5   5dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
+       "6   6dbbbdf7-4589-11e9-bf3b-b469212bff5b  \n",
+       "7   6dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
+       "8   6dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
+       "9   5dbbbdf7-4589-11e9-bf3b-b469212bff5c  \n",
+       "10  5dbbbdf7-4589-11e9-bf3b-b469212bff5d  \n",
+       "11  6dbbbdf7-4589-11e9-bf3b-b469212bff5d  \n",
+       "12  6dbbbdf7-4589-11e9-bf3b-b469212bff5d  \n",
+       "13  6dbbbdf7-4589-11e9-bf3b-b469212bff5d  \n",
+       "14  5dbbbdf7-4589-11e9-bf3b-b469212bff5d  \n",
+       "15  6dbbbdf7-4589-11e9-bf3b-b469212bff5d  "
       ]
      },
      "metadata": {},
