Initiating better documented examples

--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -44,7 +44,7 @@
     "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
     "                      \"registry\": registry,\n",
     "                      \"duration\" : 14}\n",
-    "activity = model.BasicActivity(**basic_activity_data)\n"
+    "activity = model.BasicActivity(**basic_activity_data)"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +168,8 @@
     "\n",
     "basic_activity_data= {\"env\"  : my_env,\n",
     "                      \"name\" : \"Basic activity\",\n",
-    "                      \"registry\": registry,\n",
     "                      \"ID\":\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",  # For logging purposes\n",
+    "                      \"registry\": registry,\n",
     "                      \"duration\" : 14,\n",
     "                      \"additional_logs\": [reporting_activity],\n",
     "                      }\n",
@@ -181,12 +181,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simualtion results"
+    "## Simulation results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "1  6dbbbdf7-4589-11e9-bf3b-b469212bff5b  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,6 +257,14 @@
     "log_df = pd.DataFrame(activity.log)\n",
     "reporting =log_df[['Message', 'ActivityState', 'Timestamp', 'Value', 'ActivityID']]\n",
     "reporting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the point of this additional reporting activity? Why does it have a duration of 0? \n",
+    "This example doesn't do anything. Just a duration of 14?"
    ]
   }
  ],
@@ -276,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
