--- a/notebooks/14_SingleRun_example.ipynb
+++ b/notebooks/14_SingleRun_example.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "# prepare input data for from_site\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)          # lon, lat\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
     "data_from_site = {\"env\": my_env,\n",
     "                  \"name\": \"from_site\",\n",
     "                  \"geometry\": location_from_site,\n",
@@ -136,10 +136,10 @@
     "from_site = Site(**data_from_site)\n",
     "\n",
     "# prepare input data for from_site\n",
-    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)            # lon, lat\n",
+    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)\n",
     "data_to_site = {\"env\": my_env,\n",
     "                \"name\": \"to_site\",\n",
-    "                \"geometry\": location_to_site,   # lon, lat\n",
+    "                \"geometry\": location_to_site,\n",
     "                \"capacity\": 50,\n",
     "                \"level\": 0\n",
     "               }\n",
