--- a/notebooks/01_BasicActivity_example.ipynb
+++ b/notebooks/01_BasicActivity_example.ipynb
@@ -4,7 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo BasicActivity"
+    "## Demo: basic activity\n",
+    "The basic steps to set up an OpenCLSim simulation are:\n",
+    "* Import libraries\n",
+    "* Initialise simpy environment\n",
+    "* Define object classes\n",
+    "* Create objects\n",
+    "  * Create sites\n",
+    "  * Create vessels\n",
+    "  * Create activities\n",
+    "* Register processes and run simpy\n",
+    "\n",
+    "----\n",
+    "\n",
+    "This notebook shows a very simple OpenCLSim example. Basically we use OpenCLSim to yield a timeout only. Some basic functionality of the logging is shown. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0. Import libraries"
    ]
   },
   {
@@ -17,21 +37,92 @@
     "import simpy\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
-    "import openclsim.plot as plot\n",
-    "\n",
-    "# setup environment\n",
-    "simulation_start = 0\n",
-    "my_env = simpy.Environment(initial_time=simulation_start)\n",
-    "registry = {}"
+    "import openclsim.plot as plot"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of basic activity"
+    "#### 1. Initialise simpy environment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup environment\n",
+    "simulation_start = 0\n",
+    "my_env = simpy.Environment(initial_time=simulation_start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Define object classes\n",
+    "In this simple example we won't define specific classes. We will only use a built in activity from OpenCLSim."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Create objects\n",
+    "##### 3.1. Create site object(s)\n",
+    "No site objects are created."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3.2. Create vessel object(s)\n",
+    "No vessel objects are created."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 3.3 Create activity/activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialise registry\n",
+    "registry = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a basic activity (it just creates an event that shifts time for 'duration')\n",
+    "activity = model.BasicActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Basic activity\",\n",
+    "    registry=registry,\n",
+    "    duration=42,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Register processes and run simpy"
    ]
   },
   {
@@ -40,30 +131,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity = model.BasicActivity(\n",
-    "    env=my_env,\n",
-    "    name=\"Basic activity\",\n",
-    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "    registry=registry,\n",
-    "    duration=14,\n",
-    ")\n"
+    "# initate the simpy processes defined in the 'basic activity' and run simpy\n",
+    "model.register_processes([activity])\n",
+    "my_env.run()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation"
+    "#### 5. Inspect results\n",
+    "##### 5.1 Inspect logs\n",
+    "The method plot.get_log_dataframe returns the log of an activity in the form of a dataframe. By adding other activities in a list as the second argument, the Activity can be made more human readable. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bc355df0-b2db-4dbd-9e36-37fc31cc8494</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>bc355df0-b2db-4dbd-9e36-37fc31cc8494</td>\n",
+       "      <td>1970-01-01 00:00:42</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Activity           Timestamp ActivityState\n",
+       "0  bc355df0-b2db-4dbd-9e36-37fc31cc8494 1970-01-01 00:00:00         START\n",
+       "1  bc355df0-b2db-4dbd-9e36-37fc31cc8494 1970-01-01 00:00:42          STOP"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model.register_processes([activity])\n",
-    "my_env.run()"
+    "plot.get_log_dataframe(activity)"
    ]
   },
   {
@@ -101,13 +243,13 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:28</td>\n",
+       "      <td>1970-01-01 00:00:42</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -116,8 +258,8 @@
       ],
       "text/plain": [
        "         Activity           Timestamp ActivityState\n",
-       "0  Basic activity 1970-01-01 00:00:14         START\n",
-       "1  Basic activity 1970-01-01 00:00:28          STOP"
+       "0  Basic activity 1970-01-01 00:00:00         START\n",
+       "1  Basic activity 1970-01-01 00:00:42          STOP"
       ]
      },
      "execution_count": 7,
@@ -133,24 +275,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Additional logging\n",
-    "The scenario can be extended by aadding additional logging instances, that is, the information of the basic activity will also be logged in the activity log of additional activities. In this example a reporting activity is added where the basic activity log is also added."
+    "#### 6. Additional logging\n",
+    "The scenario can be extended by adding additional logging instances, that is, the information of the basic activity will also be logged in the activity log of additional activities. This is useful for more complex nested activities. In this example a reporting activity is added where the basic activity log is also added."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# initiate SimPy environment\n",
     "simulation_start = 0\n",
     "my_env = simpy.Environment(initial_time=simulation_start)\n",
-    "registry = {}\n",
     "\n",
+    "# create activities\n",
+    "registry = {}\n",
     "reporting_activity = model.BasicActivity(\n",
     "    env=my_env,\n",
     "    name=\"Reporting activity\",\n",
-    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5k\",\n",
     "    registry=registry,\n",
     "    duration=0,\n",
     ")\n",
@@ -158,10 +301,11 @@
     "    env=my_env,\n",
     "    name=\"Basic activity\",\n",
     "    registry=registry,\n",
-    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "    duration=14,\n",
-    "    additional_logs=[reporting_activity, reporting_activity],\n",
+    "    duration=42,\n",
+    "    additional_logs=[reporting_activity],\n",
     ")\n",
+    "\n",
+    "# initate the simpy processes defined in the 'while activity' and run simpy\n",
     "model.register_processes([basic_activity])\n",
     "my_env.run()"
    ]
@@ -170,12 +314,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simualtion results"
+    "#### 6.1 Inspect results\n",
+    "We now show the dataframe of the reporting_activity log, and use the basic_activity to make it more human readable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -202,6 +347,8 @@
        "      <th>Activity</th>\n",
        "      <th>Timestamp</th>\n",
        "      <th>ActivityState</th>\n",
+       "      <th>type</th>\n",
+       "      <th>ref</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -210,115 +357,39 @@
        "      <td>Basic activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>de553233-2ac6-4085-81aa-cadc21a61431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
+       "      <td>1970-01-01 00:00:42</td>\n",
        "      <td>STOP</td>\n",
+       "      <td>additional log</td>\n",
+       "      <td>de553233-2ac6-4085-81aa-cadc21a61431</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Activity           Timestamp ActivityState\n",
-       "0  Basic activity 1970-01-01 00:00:00         START\n",
-       "1  Basic activity 1970-01-01 00:00:14          STOP"
+       "         Activity           Timestamp ActivityState            type  \\\n",
+       "0  Basic activity 1970-01-01 00:00:00         START  additional log   \n",
+       "1  Basic activity 1970-01-01 00:00:42          STOP  additional log   \n",
+       "\n",
+       "                                    ref  \n",
+       "0  de553233-2ac6-4085-81aa-cadc21a61431  \n",
+       "1  de553233-2ac6-4085-81aa-cadc21a61431  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plot.get_log_dataframe(basic_activity, [basic_activity])"
+    "plot.get_log_dataframe(reporting_activity, [basic_activity])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>ActivityState</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>START</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>START</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>STOP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Basic activity</td>\n",
-       "      <td>1970-01-01 00:00:14</td>\n",
-       "      <td>STOP</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Activity           Timestamp ActivityState\n",
-       "0  Basic activity 1970-01-01 00:00:00         START\n",
-       "1  Basic activity 1970-01-01 00:00:00         START\n",
-       "2  Basic activity 1970-01-01 00:00:14          STOP\n",
-       "3  Basic activity 1970-01-01 00:00:14          STOP"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plot.get_log_dataframe(reporting_activity, [basic_activity, reporting_activity])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -337,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
