Cleaned up example 02 and 03

--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -4,7 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo MoverActivity"
+    "## Demo: MoverActivity\n",
+    "The basic steps to set up an OpenCLSim simulation are:\n",
+    "* Import libraries\n",
+    "* Initialise simpy environment\n",
+    "* Define object classes\n",
+    "* Create objects\n",
+    "  * Create sites\n",
+    "  * Create vessels\n",
+    "  * Create activities\n",
+    "* Register processes and run simpy\n",
+    "\n",
+    "----\n",
+    "\n",
+    "This notebook shows the basic contours of a first OpenCLSim simulation. It defines a from_site and moves vessel01 from there to a to_site. No volume is shifted yet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0. Import libraries"
    ]
   },
   {
@@ -17,22 +37,18 @@
     "import simpy\n",
     "\n",
     "import shapely.geometry\n",
-    "\n",
     "import pandas as pd\n",
+    "\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
-    "import openclsim.plot as plot\n",
-    "\n",
-    "simulation_start = 0\n",
-    "my_env = simpy.Environment(initial_time=simulation_start)\n",
-    "registry = {}"
+    "import openclsim.plot as plot"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of Sites"
+    "#### 1. Initialise simpy environment"
    ]
   },
   {
@@ -41,6 +57,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup environment\n",
+    "simulation_start = 0\n",
+    "my_env = simpy.Environment(initial_time=simulation_start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Define object classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a Site object based on desired mixin classes\n",
     "Site = type(\n",
     "    \"Site\",\n",
     "    (\n",
@@ -52,6 +87,8 @@
     "    ),\n",
     "    {},\n",
     ")\n",
+    "\n",
+    "# create a TransportProcessingResource object based on desired mixin classes\n",
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
@@ -60,28 +97,8 @@
     "        core.ContainerDependentMovable,\n",
     "        core.HasResource,\n",
     "        core.Processor,\n",
-    "        core.LoadingFunction,\n",
-    "        core.UnloadingFunction,\n",
     "    ),\n",
     "    {},\n",
-    ")\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
-    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_site = Site(\n",
-    "    env=my_env,\n",
-    "    name=\"Dumplocatie\",\n",
-    "    ID=\"6dbbbdf5-4589-11e9-82b2-b469212bff5b\",\n",
-    "    geometry=location_to_site,\n",
-    "    capacity=10,\n",
-    "    level=0,\n",
     ")"
    ]
   },
@@ -89,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creation of Vessel"
+    "#### 3. Create objects\n",
+    "##### 3.1. Create site object(s)"
    ]
   },
   {
@@ -98,23 +116,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hopper = TransportProcessingResource(\n",
-    "    env=my_env,\n",
-    "    name=\"Hopper 01\",\n",
-    "    ID=\"6dbbbdf6-4589-11e9-95a2-b469212bff5b\",\n",
-    "    geometry=location_from_site,\n",
-    "    loading_rate=1,\n",
-    "    unloading_rate=1,\n",
-    "    capacity=5,\n",
-    "    compute_v=lambda x: 10,\n",
-    ")"
+    "# prepare input data for from_site\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
+    "\n",
+    "# prepare input data for from_site\n",
+    "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)\n",
+    "data_to_site = {\"env\": my_env,\n",
+    "                \"name\": \"to_site\",\n",
+    "                \"geometry\": location_to_site,\n",
+    "                \"capacity\": 100,\n",
+    "                \"level\": 100\n",
+    "               }\n",
+    "# instantiate to_site \n",
+    "to_site = Site(**data_to_site)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of Move activity"
+    "##### 3.2. Create vessel object(s)"
    ]
   },
   {
@@ -123,21 +144,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "activity = model.MoveActivity(\n",
-    "    env=my_env,\n",
-    "    name=\"Soil movement\",\n",
-    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "    registry=registry,\n",
-    "    mover=hopper,\n",
-    "    destination=to_site,\n",
-    ")"
+    "# prepare input data for vessel_01\n",
+    "data_vessel01 = {\"env\": my_env,\n",
+    "                 \"name\": \"vessel01\",\n",
+    "                 \"geometry\": location_from_site, \n",
+    "                 \"capacity\": 5,\n",
+    "                 \"compute_v\": lambda x: 10\n",
+    "               }\n",
+    "# instantiate vessel_01 \n",
+    "vessel01 = TransportProcessingResource(**data_vessel01)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run simulation"
+    "##### 3.3 Create activity/activities"
    ]
   },
   {
@@ -146,13 +168,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.register_processes([activity])\n",
-    "my_env.run()"
+    "# initialise registry\n",
+    "registry = {}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity = model.MoveActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Move activity\",\n",
+    "    registry=registry,\n",
+    "    mover=vessel01,\n",
+    "    destination=to_site,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Register processes and run simpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initate the simpy processes defined in the 'move activity' and run simpy\n",
+    "model.register_processes([activity])\n",
+    "my_env.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Inspect results\n",
+    "##### 5.1 Inspect logs\n",
+    "We can now inspect the logs. Since the model only contains a move activity not volume was shifted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,13 +248,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Soil movement</td>\n",
+       "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Soil movement</td>\n",
+       "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
@@ -200,13 +264,23 @@
       ],
       "text/plain": [
        "        Activity                  Timestamp ActivityState\n",
-       "0  Soil movement 1970-01-01 00:00:00.000000         START\n",
-       "1  Soil movement 1970-01-01 00:15:42.824591          STOP"
+       "0  Move activity 1970-01-01 00:00:00.000000         START\n",
+       "1  Move activity 1970-01-01 00:15:42.824591          STOP"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(plot.get_log_dataframe(activity, [activity]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -238,7 +312,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Soil movement</td>\n",
+       "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
@@ -246,7 +320,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Soil movement</td>\n",
+       "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:15:42.824591</td>\n",
        "      <td>STOP</td>\n",
        "      <td>POINT (4.25222222 52.11428333)</td>\n",
@@ -258,8 +332,8 @@
       ],
       "text/plain": [
        "        Activity                  Timestamp ActivityState  \\\n",
-       "0  Soil movement 1970-01-01 00:00:00.000000         START   \n",
-       "1  Soil movement 1970-01-01 00:15:42.824591          STOP   \n",
+       "0  Move activity 1970-01-01 00:00:00.000000         START   \n",
+       "1  Move activity 1970-01-01 00:15:42.824591          STOP   \n",
        "\n",
        "                         geometry  container level  \n",
        "0  POINT (4.18055556 52.18664444)              0.0  \n",
@@ -271,8 +345,14 @@
     }
    ],
    "source": [
-    "display(plot.get_log_dataframe(activity, [activity]))\n",
-    "display(plot.get_log_dataframe(hopper, [activity]))"
+    "display(plot.get_log_dataframe(vessel01, [activity]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe that there was movement. There was no amount shifting."
    ]
   }
  ],
@@ -292,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
