--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -4,10 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo ShiftAmountActivity\n",
-    "This activity uses a processor to transfer a specified number of objects from an origin resource, which must have a container, to a destination resource, which also must have a container.\n",
+    "## Demo: ShiftAmountActivity\n",
+    "The basic steps to set up an OpenCLSim simulation are:\n",
+    "* Import libraries\n",
+    "* Initialise simpy environment\n",
+    "* Define object classes\n",
+    "* Create objects\n",
+    "  * Create sites\n",
+    "  * Create vessels\n",
+    "  * Create activities\n",
+    "* Register processes and run simpy\n",
     "\n",
-    "Shift Amount checks the possible amount of objects which can be transferred, based on the number of objects available in the origin, the number of objects which can be stored in the destination and the number of objects requested to be transferred. If the number of actually to be transferred objects is zero than an exception is raised. These cases have to be prevented by using appropriate events."
+    "----\n",
+    "\n",
+    "This notebook shows the workings of the ShiftAmountActivity. This activity uses a processor to transfer a specified number of objects from an origin resource, which must have a container, to a destination resource, which also must have a container. In this case it shifts payload from a from_site to vessel01.\n",
+    "\n",
+    "NB: The ShiftAmountActivity checks the possible amount of objects which can be transferred, based on the number of objects available in the origin, the number of objects which can be stored in the destination and the number of objects requested to be transferred. If the number of actually to be transferred objects is zero than an exception is raised. These cases have to be prevented by using appropriate events."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0. Import libraries"
    ]
   },
   {
@@ -20,11 +39,18 @@
     "import simpy\n",
     "\n",
     "import shapely.geometry\n",
-    "\n",
     "import pandas as pd\n",
+    "\n",
     "import openclsim.core as core\n",
     "import openclsim.model as model\n",
     "import openclsim.plot as plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Initialise simpy environment"
    ]
   },
   {
@@ -33,9 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setup environment\n",
     "simulation_start = 0\n",
-    "my_env = simpy.Environment(initial_time=simulation_start)\n",
-    "registry = {}"
+    "my_env = simpy.Environment(initial_time=simulation_start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Define object classes"
    ]
   },
   {
@@ -44,6 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create a Site object based on desired mixin classes\n",
     "Site = type(\n",
     "    \"Site\",\n",
     "    (\n",
@@ -55,28 +89,27 @@
     "    ),\n",
     "    {},\n",
     ")\n",
+    "\n",
+    "# create a TransportProcessingResource object based on desired mixin classes\n",
     "TransportProcessingResource = type(\n",
     "    \"TransportProcessingResource\",\n",
     "    (\n",
     "        core.Identifiable,\n",
     "        core.Log,\n",
     "        core.ContainerDependentMovable,\n",
-    "        core.Processor,\n",
     "        core.HasResource,\n",
-    "        core.LoadingFunction,\n",
-    "        core.UnloadingFunction,\n",
+    "        core.Processor,\n",
     "    ),\n",
     "    {},\n",
-    ")\n",
-    "\n",
-    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)"
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of Sites"
+    "#### 3. Create objects\n",
+    "##### 3.1. Create site object(s)"
    ]
   },
   {
@@ -85,20 +118,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from_site = Site(\n",
-    "    env=my_env,\n",
-    "    name=\"Winlocatie\",\n",
-    "    geometry=location_from_site,\n",
-    "    capacity=10,\n",
-    "    level=2,\n",
-    ")"
+    "# prepare input data for from_site\n",
+    "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
+    "data_from_site = {\"env\": my_env,\n",
+    "                \"name\": \"from_site\",\n",
+    "                \"geometry\": location_from_site,\n",
+    "                \"capacity\": 100,\n",
+    "                \"level\": 100\n",
+    "               }\n",
+    "# instantiate to_site \n",
+    "from_site = Site(**data_from_site)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creation of Vessel"
+    "##### 3.2. Create vessel object(s)"
    ]
   },
   {
@@ -107,22 +143,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hopper = TransportProcessingResource(\n",
-    "    env=my_env,\n",
-    "    name=\"Hopper 01\",\n",
-    "    geometry=location_from_site,\n",
-    "    loading_rate=1,\n",
-    "    unloading_rate=1,\n",
-    "    capacity=5,\n",
-    "    compute_v=lambda x: 10,\n",
-    ")"
+    "# prepare input data for vessel_01\n",
+    "data_vessel01 = {\"env\": my_env,\n",
+    "                 \"name\": \"vessel01\",\n",
+    "                 \"geometry\": location_from_site, \n",
+    "                 \"capacity\": 5,\n",
+    "                 \"compute_v\": lambda x: 10\n",
+    "               }\n",
+    "# instantiate vessel_01 \n",
+    "vessel01 = TransportProcessingResource(**data_vessel01)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition of Shift Amount activity"
+    "##### 3.3 Create activity/activities"
    ]
   },
   {
@@ -131,24 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shift_amount_activity_data = model.ShiftAmountActivity(\n",
-    "    env=my_env,\n",
-    "    name=\"Transfer MP\",\n",
-    "    ID=\"6dbbbdf7-4589-11e9-bf3b-b469212bff5b\",\n",
-    "    registry=registry,\n",
-    "    processor=hopper,\n",
-    "    origin=from_site,\n",
-    "    destination=hopper,\n",
-    "    amount=100,\n",
-    "    duration=10,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Run simulation"
+    "# initialise registry\n",
+    "registry = {}"
    ]
   },
   {
@@ -157,8 +177,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "shift_amount_activity_data = model.ShiftAmountActivity(\n",
+    "    env=my_env,\n",
+    "    name=\"Shift amount activity\",\n",
+    "    registry=registry,\n",
+    "    processor=vessel01,\n",
+    "    origin=from_site,\n",
+    "    destination=vessel01,\n",
+    "    amount=100,\n",
+    "    duration=60,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Register processes and run simpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.register_processes([shift_amount_activity_data])\n",
     "my_env.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Inspect results\n",
+    "##### 5.1 Inspect logs\n",
+    "We can now inspect the logs. The model now shifted cargo from the from_site onto vessel01."
    ]
   },
   {
@@ -195,14 +249,14 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Transfer MP</td>\n",
+       "      <td>Shift amount activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>Shift amount activity</td>\n",
+       "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>STOP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -210,14 +264,24 @@
        "</div>"
       ],
       "text/plain": [
-       "      Activity           Timestamp ActivityState\n",
-       "0  Transfer MP 1970-01-01 00:00:00         START\n",
-       "1  Transfer MP 1970-01-01 00:00:10          STOP"
+       "                Activity           Timestamp ActivityState\n",
+       "0  Shift amount activity 1970-01-01 00:00:00         START\n",
+       "1  Shift amount activity 1970-01-01 00:01:00          STOP"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(plot.get_log_dataframe(shift_amount_activity_data, [shift_amount_activity_data]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -249,18 +313,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Transfer MP</td>\n",
+       "      <td>Shift amount activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
-       "      <td>2</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>Shift amount activity</td>\n",
+       "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>STOP</td>\n",
-       "      <td>0</td>\n",
+       "      <td>95.0</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -268,9 +332,9 @@
        "</div>"
       ],
       "text/plain": [
-       "      Activity           Timestamp ActivityState  container level  \\\n",
-       "0  Transfer MP 1970-01-01 00:00:00         START                2   \n",
-       "1  Transfer MP 1970-01-01 00:00:10          STOP                0   \n",
+       "                Activity           Timestamp ActivityState  container level  \\\n",
+       "0  Shift amount activity 1970-01-01 00:00:00         START            100.0   \n",
+       "1  Shift amount activity 1970-01-01 00:01:00          STOP             95.0   \n",
        "\n",
        "                         geometry  \n",
        "0  POINT (4.18055556 52.18664444)  \n",
@@ -279,7 +343,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(plot.get_log_dataframe(from_site, [shift_amount_activity_data]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -311,7 +385,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Transfer MP</td>\n",
+       "      <td>Shift amount activity</td>\n",
        "      <td>1970-01-01 00:00:00</td>\n",
        "      <td>START</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
@@ -319,44 +393,24 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>1970-01-01 00:00:00</td>\n",
-       "      <td>START</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>1970-01-01 00:00:10</td>\n",
+       "      <td>Shift amount activity</td>\n",
+       "      <td>1970-01-01 00:01:00</td>\n",
        "      <td>STOP</td>\n",
        "      <td>POINT (4.18055556 52.18664444)</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Transfer MP</td>\n",
-       "      <td>1970-01-01 00:00:10</td>\n",
-       "      <td>STOP</td>\n",
-       "      <td>POINT (4.18055556 52.18664444)</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Activity           Timestamp ActivityState  \\\n",
-       "0  Transfer MP 1970-01-01 00:00:00         START   \n",
-       "1  Transfer MP 1970-01-01 00:00:00         START   \n",
-       "2  Transfer MP 1970-01-01 00:00:10          STOP   \n",
-       "3  Transfer MP 1970-01-01 00:00:10          STOP   \n",
+       "                Activity           Timestamp ActivityState  \\\n",
+       "0  Shift amount activity 1970-01-01 00:00:00         START   \n",
+       "1  Shift amount activity 1970-01-01 00:01:00          STOP   \n",
        "\n",
        "                         geometry  container level  \n",
        "0  POINT (4.18055556 52.18664444)              0.0  \n",
-       "1  POINT (4.18055556 52.18664444)              0.0  \n",
-       "2  POINT (4.18055556 52.18664444)              2.0  \n",
-       "3  POINT (4.18055556 52.18664444)              2.0  "
+       "1  POINT (4.18055556 52.18664444)              5.0  "
       ]
      },
      "metadata": {},
@@ -364,16 +418,14 @@
     }
    ],
    "source": [
-    "display(plot.get_log_dataframe(shift_amount_activity_data, [shift_amount_activity_data]))\n",
-    "display(plot.get_log_dataframe(from_site, [shift_amount_activity_data]))\n",
-    "display(plot.get_log_dataframe(hopper, [shift_amount_activity_data]))"
+    "display(plot.get_log_dataframe(vessel01, [shift_amount_activity_data]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting levels ob objects in the hopper and the from_site are requested below. "
+    "Observe that an amount has been shifted from from_site to vessel01. There was no movement."
    ]
   }
  ],
@@ -393,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
