--- a/notebooks/05_WhileActivity_example.ipynb
+++ b/notebooks/05_WhileActivity_example.ipynb
@@ -303,6 +303,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 5.2 Visualise gantt charts"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
