Some edits, updated examples (up to 19)

--- a/notebooks/13_Resource_synchronization.ipynb
+++ b/notebooks/13_Resource_synchronization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Resource Synchronization\n",
+    "## Demo: resource synchronization\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
