--- a/notebooks/16_Feeder.ipynb
+++ b/notebooks/16_Feeder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Feeder Concept\n",
+    "## Demo: feeder concept\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
@@ -25,7 +25,7 @@
     "\n",
     "NB1: in this example there are two types of cargo: Cargo_1 and Cargo_2. This means that the vessels and sites have to have multistore containers that can contain these different cargos. \n",
     "\n",
-    "NB2: For now we only implemented the transport and installation process for Cargo_1. In fact only a quantity of one is shifted each cycle. THis needs to be extended still. The activities should furthermore be extended to include also Cargo_2. "
+    "NB2: For now we only implemented the transport and installation process for Cargo_1. In fact only a quantity of one is shifted each cycle. An example of sequential execution of two types fo cargo transfer is found in Example 10_MultiContainer. "
    ]
   },
   {
