--- a/notebooks/17_multiple_cutters_multiple_barges_example (BUG IN RESERVATIONS).ipynb
+++ b/notebooks/17_multiple_cutters_multiple_barges_example (BUG IN RESERVATIONS).ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Demo Multiple Cutters - Multiple Barches\n",
+    "## Example still work in progress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Demo Multiple Cutters - Multiple Barches\n",
     "This notebook shows a basics of a feeder concept. This scenario has two vessels:\n",
     "* a *vessel* for the transport of material\n",
     "* an *installer*, receiving the material and installing it.\n",
@@ -519,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
