--- a/notebooks/01_BasicActivity.ipynb
+++ b/notebooks/01_BasicActivity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: basic activity\n",
+    "## Demo: BasicActivity\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
