--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: MoverActivity\n",
+    "## Demo: MoveActivity\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
