--- a/notebooks/08_ParallelActivity.ipynb
+++ b/notebooks/08_ParallelActivity.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Parallel activities\n",
+    "## Demo: ParallelActivity\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
