--- a/notebooks/11_Process_synchronization.ipynb
+++ b/notebooks/11_Process_synchronization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Process Synchronization\n",
+    "## Demo: process synchronization\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
