Updated examples (up to 21)

--- a/notebooks/18_SingleRun_with_WeatherCriterion.ipynb
+++ b/notebooks/18_SingleRun_with_WeatherCriterion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: repeating a subcycle while accounting for workable wave conditions\n",
+    "## Demo: SingleRun with WeatherCriterion\n",
     "The basic steps to set up an OpenCLSim simulation are:\n",
     "* Import libraries\n",
     "* Initialise simpy environment\n",
