--- a/notebooks/24_cutters and barges (BUG IN RESERVATIONS).ipynb
+++ b/notebooks/24_cutters and barges (BUG IN RESERVATIONS).ipynb
@@ -166,7 +166,6 @@
     "        \"registry\": registry,\n",
     "        \"mover\": barge_1,\n",
     "        \"destination\": from_site,\n",
-    "        \"postpone_start\": True,\n",
     "    }),\n",
     "    model.ShiftAmountActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -177,8 +176,7 @@
     "        \"destination\": barge_1,\n",
     "        \"amount\": 5,\n",
     "        \"duration\": 3600,\n",
-    "        \"postpone_start\": True,\n",
-    "#         \"requested_resources\":requested_resources\n",
+    "        \"requested_resources\":requested_resources\n",
     "    }),\n",
     "    model.MoveActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -186,7 +184,6 @@
     "        \"registry\": registry,\n",
     "        \"mover\": barge_1,\n",
     "        \"destination\": to_site,\n",
-    "        \"postpone_start\": True,\n",
     "    }),\n",
     "    model.ShiftAmountActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -197,8 +194,7 @@
     "        \"destination\": to_site,\n",
     "        \"amount\": 5,\n",
     "        \"duration\": 3600,\n",
-    "        \"postpone_start\": True,\n",
-    "#         \"requested_resources\":requested_resources\n",
+    "        \"requested_resources\":requested_resources\n",
     "    })\n",
     "]\n",
     "\n",
@@ -208,7 +204,6 @@
     "    \"name\": \"Single run process_1\",\n",
     "    \"registry\": registry,\n",
     "    \"sub_processes\": single_run,\n",
-    "    \"postpone_start\": True,\n",
     "}\n",
     "activity = model.SequentialActivity(**sequential_activity_data)\n",
     "\n",
@@ -217,8 +212,7 @@
     "    \"name\": \"while_1\",\n",
     "    \"registry\": registry,\n",
     "    \"sub_processes\": [activity],\n",
-    "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\"}],\n",
-    "    \"postpone_start\": False,\n",
+    "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\", \"id_\":\"default_reservations\"}],\n",
     "})"
    ]
   },
@@ -235,7 +229,6 @@
     "        \"registry\": registry,\n",
     "        \"mover\": barge_2,\n",
     "        \"destination\": from_site,\n",
-    "        \"postpone_start\": True,\n",
     "    }),\n",
     "    model.ShiftAmountActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -246,7 +239,6 @@
     "        \"destination\": barge_2,\n",
     "        \"amount\": 5,\n",
     "        \"duration\": 3600,\n",
-    "        \"postpone_start\": True,\n",
     "    }),\n",
     "    model.MoveActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -254,7 +246,6 @@
     "        \"registry\": registry,\n",
     "        \"mover\": barge_2,\n",
     "        \"destination\": to_site,\n",
-    "        \"postpone_start\": True,\n",
     "    }),\n",
     "    model.ShiftAmountActivity(**{\n",
     "        \"env\": my_env,\n",
@@ -265,7 +256,6 @@
     "        \"destination\": to_site,\n",
     "        \"amount\": 5,\n",
     "        \"duration\": 3600,\n",
-    "        \"postpone_start\": True,\n",
     "    })\n",
     "]\n",
     "\n",
@@ -275,17 +265,14 @@
     "    \"name\": \"Single run process_2\",\n",
     "    \"registry\": registry,\n",
     "    \"sub_processes\": single_run,\n",
-    "    \"postpone_start\": True,\n",
-    "#     \"keep_resources\"\n",
     "})\n",
     "\n",
-    "while_activity = model.WhileActivity(**{\n",
+    "while_activity2 = model.WhileActivity(**{\n",
     "    \"name\": \"while_2\",\n",
     "    \"env\": my_env,\n",
     "    \"registry\": registry,\n",
     "    \"sub_processes\": [activity],\n",
-    "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\"}],\n",
-    "    \"postpone_start\": False,\n",
+    "    \"condition_event\": [{\"type\":\"container\", \"concept\": to_site, \"state\":\"full\", \"id_\":\"default_reservations\"}],\n",
     "})"
    ]
   },
@@ -297,6 +284,7 @@
    },
    "outputs": [],
    "source": [
+    "model.register_processes([while_activity2,while_activity])\n",
     "my_env.run()"
    ]
   },
@@ -309,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Level of the to_site: 60.0, Capacity of the to_site 55\n"
+      "Level of the to_site: 55, Capacity of the to_site 55\n"
      ]
     }
    ],
@@ -338,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
