explain how to show human names instead of uuid

--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -248,6 +248,79 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>59203ad4-964b-4fe9-a427-24f7025dc725</td>\n",
+       "      <td>1970-01-01 00:00:00.000000</td>\n",
+       "      <td>START</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>59203ad4-964b-4fe9-a427-24f7025dc725</td>\n",
+       "      <td>1970-01-01 00:15:42.824591</td>\n",
+       "      <td>STOP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Activity                  Timestamp  \\\n",
+       "0  59203ad4-964b-4fe9-a427-24f7025dc725 1970-01-01 00:00:00.000000   \n",
+       "1  59203ad4-964b-4fe9-a427-24f7025dc725 1970-01-01 00:15:42.824591   \n",
+       "\n",
+       "  ActivityState  \n",
+       "0         START  \n",
+       "1          STOP  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(plot.get_log_dataframe(activity))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the log shows only uuids, and not human readable names. Add a list of activities for which you want the unique uuids to be mapped to the (not necesassily unique) human readable names. So you have to suppply the activity object twice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Activity</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>ActivityState</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <td>Move activity</td>\n",
        "      <td>1970-01-01 00:00:00.000000</td>\n",
        "      <td>START</td>\n",
@@ -278,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
