--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: MoveActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## MoveActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook shows the basic contours of a first OpenCLSim simulation. It defines a from_site and moves vessel01 from there to a to_site. No volume is shifted yet."
+    "This notebook shows the basic contours of a first OpenCLSim simulation. It defines a __from_site__ and moves __vessel01__ from there to a __to_site__. No volume is shifted yet."
    ]
   },
   {
@@ -116,10 +105,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prepare input data for from_site\n",
+    "# prepare input data for from_site (note: in this example we only need the start location)\n",
     "location_from_site = shapely.geometry.Point(4.18055556, 52.18664444)\n",
     "\n",
-    "# prepare input data for from_site\n",
+    "# prepare input data for to_site\n",
     "location_to_site = shapely.geometry.Point(4.25222222, 52.11428333)\n",
     "data_to_site = {\"env\": my_env,\n",
     "                \"name\": \"to_site\",\n",
@@ -431,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
