--- a/notebooks/01_BasicActivity.ipynb
+++ b/notebooks/01_BasicActivity.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: BasicActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## BasicActivity\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook shows a very simple OpenCLSim example. Basically we use OpenCLSim to yield a timeout only. Some basic functionality of the logging is shown. "
+    "This notebook shows a very simple OpenCLSim example. We use OpenCLSim's BasicActivity module to yield a timeout only. Some basic functionality of the logging is shown. "
    ]
   },
   {
@@ -66,7 +55,7 @@
    "metadata": {},
    "source": [
     "#### 2. Define object classes\n",
-    "In this simple example we won't define specific classes. We will only use a built in activity from OpenCLSim."
+    "In this simple example we won't define specific classes. We will only use a built-in activity from OpenCLSim."
    ]
   },
   {
@@ -109,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a basic activity (it just creates an event that shifts time for 'duration')\n",
+    "# create a basic activity (it just creates an event that shifts time for 'duration', in this case 42 time units)\n",
     "activity = model.BasicActivity(\n",
     "    env=my_env,\n",
     "    name=\"Basic activity\",\n",
@@ -142,7 +131,7 @@
    "source": [
     "#### 5. Inspect results\n",
     "##### 5.1 Inspect logs\n",
-    "The method plot.get_log_dataframe returns the log of an activity in the form of a dataframe. By adding other activities in a list as the second argument, the Activity can be made more human readable. "
+    "The method __plot.get_log_dataframe__ returns the log of an activity in the form of a dataframe. By adding other activities in a list as the second argument, the Activity can be made more human readable. "
    ]
   },
   {
@@ -275,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Additional logging\n",
+    "##### 5.2. More advanced logging options\n",
     "The scenario can be extended by adding additional logging instances, that is, the information of the basic activity will also be logged in the activity log of additional activities. This is useful for more complex nested activities. In this example a reporting activity is added where the basic activity log is also added."
    ]
   },
@@ -314,7 +303,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6.1 Inspect results\n",
     "We now show the dataframe of the reporting_activity log, and use the basic_activity to make it more human readable."
    ]
   },
@@ -394,7 +382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -408,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
