Some edits to the examples, and missing : fixed

--- a/notebooks/01_BasicActivity.ipynb
+++ b/notebooks/01_BasicActivity.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BasicActivity\n",
+    "## model.BasicActivity\n",
     "\n",
-    "This notebook shows a very simple OpenCLSim example. We use OpenCLSim's BasicActivity module to yield a timeout only. Some basic functionality of the logging is shown. "
+    "This notebook shows a very simple OpenCLSim example. We use OpenCLSim's __model.BasicActivity__ to yield a timeout only. Some basic functionality of the logging is shown. "
    ]
   },
   {
