--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MoveActivity\n",
+    "## model.MoveActivity\n",
     "\n",
-    "This notebook shows the basic contours of a first OpenCLSim simulation. It defines a __from_site__ and moves __vessel01__ from there to a __to_site__. No volume is shifted yet."
+    "This notebook shows the basic contours of a first OpenCLSim simulation. We use OpenCLSim's __model.MoveActivity__. We define a __from_site__ and a __vessel01__ that moves from there to a __to_site__. No volume is shifted yet."
    ]
   },
   {
