--- a/notebooks/03_ShiftAmountActivity.ipynb
+++ b/notebooks/03_ShiftAmountActivity.ipynb
@@ -4,22 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: ShiftAmountActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## model.ShiftAmountActivity\n",
     "\n",
-    "----\n",
+    "This notebook shows the workings of __model.ShiftAmountActivity__. This activity uses a processor to transfer a specified number of objects from an origin resource, which must have a container, to a destination resource, which also must have a container. In this case it shifts payload from a __from_site__ to __vessel01__.\n",
     "\n",
-    "This notebook shows the workings of the ShiftAmountActivity. This activity uses a processor to transfer a specified number of objects from an origin resource, which must have a container, to a destination resource, which also must have a container. In this case it shifts payload from a from_site to vessel01.\n",
-    "\n",
-    "NB: The ShiftAmountActivity checks the possible amount of objects which can be transferred, based on the number of objects available in the origin, the number of objects which can be stored in the destination and the number of objects requested to be transferred. If the number of actually to be transferred objects is zero than an exception is raised. These cases have to be prevented by using appropriate events."
+    "NB: The model.ShiftAmountActivity checks the possible amount of objects which can be transferred, based on the number of objects available in the origin, the number of objects which can be stored in the destination and the number of objects requested to be transferred. If the number of actually to be transferred objects is zero than an exception is raised. These cases have to be prevented by using appropriate events."
    ]
   },
   {
@@ -126,7 +115,7 @@
     "                \"capacity\": 100,\n",
     "                \"level\": 100\n",
     "               }\n",
-    "# instantiate to_site \n",
+    "# instantiate from_site \n",
     "from_site = Site(**data_from_site)"
    ]
   },
@@ -431,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
