--- a/notebooks/02_MoveActivity.ipynb
+++ b/notebooks/02_MoveActivity.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## model.MoveActivity\n",
     "\n",
-    "This notebook shows the basic contours of a first OpenCLSim simulation. We use OpenCLSim's __model.MoveActivity__. We define a __from_site__ and a __vessel01__ that moves from there to a __to_site__. No volume is shifted yet."
+    "This notebook shows the basic contours of a first OpenCLSim simulation. We use OpenCLSim's __model.MoveActivity__. We define a __from_site__ location and a __vessel01__ that moves from there to a __to_site__. No volume is shifted yet."
    ]
   },
   {
