Further added examples

--- a/notebooks/11_Process_synchronization.ipynb
+++ b/notebooks/11_Process_synchronization.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: process synchronization\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## process synchronization\n",
     "\n",
-    "----\n",
-    "\n",
-    "Next to the synchronization of activities using controll structures like **while** and **sequence** used within a single process, OpenCLSim allows to synchronize different processes using **start_events**. Start_events can be specified using the expression language as documented to **delay** the execution of a process. Control structures do not delay the execution but explicitly start the execution when possible. The difference is very well visible when you compare the activity log in this demo with the one from the sequence demo."
+    "Next to the synchronization of activities using control structures like __SequentialActivity__, __WhileActivity__, __RepeatActivity__ and __ParallelActivity__ used within a single process, OpenCLSim allows to synchronize different processes using __start_events__. Start_events can be specified using the expression language as documented to __delay__ the execution of a process. Control structures do not delay the execution but explicitly start the execution when possible. The difference is very well visible when you compare the activity log in this demo with the one from the sequence demo."
    ]
   },
   {
@@ -1393,7 +1382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1407,7 +1396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
