--- a/notebooks/13_Resource_synchronization.ipynb
+++ b/notebooks/13_Resource_synchronization.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: resource synchronization\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
-    "\n",
-    "----\n",
+    "## resource synchronization\n",
     "\n",
     "Synchronization of resources means that before objects can be moved from one location to another, the processor as well as the origin and the destination resource must be available. If a resource is not available the process will wait untill the resource available.\n",
     "\n",
@@ -2292,7 +2281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2306,7 +2295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
