--- a/notebooks/07_WhileActivity_with_ShiftAmount.ipynb
+++ b/notebooks/07_WhileActivity_with_ShiftAmount.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WhileActivity with ShiftAmountActivity\n",
+    "## WhileActivity + ShiftAmountActivity\n",
     "\n",
     "The combination of a __model.WhileActivity__ with a __model.ShiftAmountActivity__ can be used to represent the loading or unloading of a vessel, where coordination of the process is represented on the granularity of the amount shifted in one iteration. In this particular example we define the time it takes to shift an amount of 1, and define a WhileActivity that executes this activity until the vessel container is full."
    ]
