--- a/notebooks/14_SingleRun.ipynb
+++ b/notebooks/14_SingleRun.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RepeatActivity with stop condition\n",
+    "## RepeatActivity + stop condition\n",
     "\n",
     "This notebook provides an example of a simulation that takes a number of __sub_processes__, grouped in a __SequentialActivity__, that is executed in a __WhileActivity__ while a __stop condition__ is not yet met.\n",
     "\n",
