--- a/notebooks/12_Complex_synchronization.ipynb
+++ b/notebooks/12_Complex_synchronization.ipynb
@@ -195,7 +195,13 @@
     "        duration=220,\n",
     "        additional_logs=[reporting_activity],\n",
     "        keep_resources=keep_resources,\n",
-    "        start_event=[{\"type\": \"activity\", \"name\": \"B Basic activity2\", \"state\": \"done\"}],\n",
+    "        start_event=[\n",
+    "            {\n",
+    "                \"name\": \"B Basic activity2\", \n",
+    "                \"type\": \"activity\", \n",
+    "                \"state\": \"done\"\n",
+    "            }\n",
+    "        ],\n",
     "    ),\n",
     "]\n",
     "\n",
