--- a/notebooks/09_wrapped_single_run_process.ipynb
+++ b/notebooks/09_wrapped_single_run_process.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Wrapped single_run_process\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## pre-packed single_run_process\n",
     "\n",
-    "----\n",
-    "\n",
-    "This notebook provides an example of a single_run_process. In the single_run_process a typical \"loading-sailing full-unloading-sailing empty\" is pre-packed in a while activity. "
+    "This notebook provides an example of a __single_run_process__. In the __single_run_process__ a typical \"loading-sailing full-unloading-sailing empty\" is pre-packed in a __WhileActivity__. "
    ]
   },
   {
@@ -4005,7 +3994,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4019,7 +4008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
