--- a/notebooks/20_Triggers_in_RepeatActivity.ipynb
+++ b/notebooks/20_Triggers_in_RepeatActivity.ipynb
@@ -4,18 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo: Triggers in RepeatActivity\n",
-    "The basic steps to set up an OpenCLSim simulation are:\n",
-    "* Import libraries\n",
-    "* Initialise simpy environment\n",
-    "* Define object classes\n",
-    "* Create objects\n",
-    "  * Create sites\n",
-    "  * Create vessels\n",
-    "  * Create activities\n",
-    "* Register processes and run simpy\n",
+    "## nesting in a RepeatActivity\n",
     "\n",
-    "----"
+    "This notebook provides an example of OpenCLSim's capability to nest various processes in a __RepeatActivity__."
    ]
   },
   {
@@ -2111,7 +2102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2125,7 +2116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
